--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_analytics: ^10.7.0
   countries_world_map: ^1.1.1
   animated_text_kit: ^4.2.2
+  firebase_database: ^10.4.7
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
