--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   firebase_database: ^10.4.7
   image_picker: ^1.0.7
+  uuid: ^4.3.3
+  firebase_storage: ^11.6.7
 
 dev_dependencies:
   flutter_test:
