--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   image_picker: ^1.0.7
   uuid: ^4.3.3
   firebase_storage: ^11.6.7
+  contacts_service: ^0.6.3
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
