--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_storage: ^11.6.7
   contacts_service: ^0.6.3
   permission_handler: ^11.3.0
+  flutter_date_range_picker: ^0.0.14
 
 dev_dependencies:
   flutter_test:
