--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   contacts_service: ^0.6.3
   permission_handler: ^11.3.0
   flutter_date_range_picker: ^0.0.14
+  flutter_spinkit: ^5.2.0
+  http: ^1.2.1
+  provider: ^6.1.2
+
 
 dev_dependencies:
   flutter_test:
