--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,9 @@ dependencies:
   permission_handler: ^11.3.0
   flutter_date_range_picker: ^0.0.14
   flutter_spinkit: ^5.2.0
-  http: ^1.2.1
+  http: ^0.13.5
   provider: ^6.1.2
-
+  openai_dalle_wrapper: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
