--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   provider: ^6.1.2
   openai_dalle_wrapper: ^1.0.0
   swiping_card_deck: ^1.3.0
-  rive: ^0.13.4
+  email_validator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
