--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,7 +80,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/not_found.webp
-  #   - images/a_dot_ham.jpeg
+   - assets/images/map.PNG
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
