--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
     id 'com.google.gms.google-services'
+    id 'com.google.firebase.firebase-perf'
 }
 
 def localProperties = new Properties()
@@ -70,5 +71,6 @@ dependencies {
     implementation("com.google.firebase:firebase-analytics")
     //implementation("com.google.firebase:firebase-core:21.1.1")
     implementation 'com.android.support:multidex:1.0.3'
+    implementation("com.google.firebase:firebase-perf")
 }
 
