--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 }
 plugins{
     id 'com.google.gms.google-services' version '4.4.1' apply false
+    id 'com.google.firebase.firebase-perf' version '1.4.2' apply false
 }
 allprojects {
     repositories {
