--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   openai_dalle_wrapper: ^1.0.0
   swiping_card_deck: ^1.3.0
   email_validator: ^2.0.1
+  firebase_performance: ^0.9.4+7
 
 dev_dependencies:
   flutter_test:
